<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mi_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/mi_new_size"
        android:title="@string/choose_new_size"
        app:showAsAction="never" />
    <item
        android:id="@+id/mi_custom"
        android:title="@string/create_custom_game"
        app:showAsAction="never" />
    <item
        android:id="@+id/mi_download"
        android:title="@string/download_custom_game"
        app:showAsAction="never" />
    <item
        android:id="@+id/mi_available_games"
        android:title="@string/available_game_names"
        app:showAsAction="never" />
</menu>